tdf#122079 - Document orientation is no longer changed in print dialog

Change-Id: I9d13cfd136f9b70674b3e43268525f8a6e1c0954
Reviewed-on: https://gerrit.libreoffice.org/66483
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit eaec995a96b41963ae9e5156b6c5c7ac022f9a55)