sw/source/uibase/uno/unotxdoc.cxx
@@ -2386,25 +2386,6 @@ static bool lcl_GetBoolProperty(
     return bRes;
 }
 
-static sal_Int32 lcl_GetIntProperty(
-    const uno::Sequence< beans::PropertyValue >& rOptions,
-    const sal_Char *pPropName,
-    sal_Int32 nDefault )
-{
-    sal_Int32 nRes = nDefault;
-    const sal_Int32 nLen = rOptions.getLength();
-    const beans::PropertyValue *pProps = rOptions.getConstArray();
-    for ( sal_Int32 i = 0;  i < nLen;  ++i )
-    {
-        if ( pProps[i].Name.equalsAscii( pPropName ) )
-        {
-            pProps[i].Value >>= nRes;
-            break;
-        }
-    }
-    return nRes;
-}
-
 SfxViewShell * SwXTextDocument::GetRenderView(
     bool &rbIsSwSrcView,
     const uno::Sequence< beans::PropertyValue >& rOptions,
@@ -2597,13 +2578,6 @@ sal_Int32 SAL_CALL SwXTextDocument::getRendererCount(
 
         if (!pViewShell || !pViewShell->GetLayout())
             return 0;
-
-        // make sure document orientation matches printer paper orientation
-        sal_Int32 nLandscape = lcl_GetIntProperty( rxOptions, "IsLandscape", -1 );
-        if ( nLandscape == 1 )
-            pViewShell->ChgAllPageOrientation( Orientation::Landscape );
-        else if ( nLandscape == 0 )
-            pViewShell->ChgAllPageOrientation( Orientation::Portrait );
 
         if (bFormat)
         {
